service.yml
apiVersion: v1
kind: Service
metadata:
  name: sample-rest-service
spec:
  selector:
    app: app-rest
  ports:
    - protocol: TCP
      port: 80
      targetPort: rest
