ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-rest-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: "arch.homework"
    http:
      paths:
        - path: /otusapp/(.+?)/(.*)
          pathType: Prefix
          backend:
            service:
              name: sample-rest-service
              port:
                number: 80
